--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
   </head>
 
   <body>
+
     <div class="container">
       <h1>Sign in</h1>
       <form>
         <div>
-          <label for="">User</label> <br />
-          <input type="text" placeholder="" />
+          <label for="">User</label> <br/>
+          <input class="input" type="text"  />
         </div>
         <br />
         <div class="paswd">
           <label>Password</label>
-          <input type="password" placeholder="" required />
+          <input type="password" placeholder="password" required />
         </div>
         <button>Login</button>
       </form>
     </div>
+
   </body>
+  <script src="./script.js"></script>
 </html>
